# resharp-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  shell.nix
.github/workflows/: ci.yml
crates/resharp/: Cargo.toml
crates/resharp-ir/: Cargo.toml
crates/resharp-ir/src/: builder.rs  derivative.rs  flags.rs  lib.rs  node.rs  printer.rs  solver.rs
crates/resharp-ir/tests/: derivative_tests.rs  neg_lookaround_tests.rs  semantics_tests.rs  subsumption_tests.rs
crates/resharp-parser/: Cargo.toml
crates/resharp-parser/src/: convert.rs  error.rs  lib.rs  parser.rs
crates/resharp-parser/tests/: comparison_tests.rs  complement_tests.rs  intersection_tests.rs  lookaround_tests.rs  match_tests.rs  node_tests.rs  parser_tests.rs
crates/resharp-parser/tests/data/: tests01.toml  tests02_lookaround.toml  tests03_boolean.toml  tests04_anchors.toml  tests05_match_end.toml  tests06_nullable_positions.toml  tests07_unsupported.toml  tests08_semantics.toml
crates/resharp-syntax/: Cargo.toml
crates/resharp-syntax/src/: kind.rs  lib.rs
crates/resharp/examples/: basic.rs
crates/resharp/src/: lib.rs
